Aggiunta icone e nuovo sistema di cambio password

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Benvenuto! | NUE 112 - Centralino FVG</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="shortcut icon" href="./img/Logo_OnlyFrenck.jpg"
+        <link rel="shortcut icon" href="./img/Logo_OnlyFrenck.jpg">
         <script type="text/javascript" src="script.js"></script>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
