--- a/Sections/change-password.html
+++ b/Sections/change-password.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Cambio Password Dipendente | NUE 112 - Centralino FVG</title>
+        <link rel="shortcut icon" href="./img/Logo_OnlyFrenck.jpg">
         <link rel="stylesheet" href="../style.css">
         <script src="text/javascript" href="../script.js"></script>
         <meta charset="UTF-8">
