Modifica file icona

--- a/NUE-Qualify/ForgotPassword/confirm-your-email.html
+++ b/NUE-Qualify/ForgotPassword/confirm-your-email.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Conferma la tua e-mail | NUE-Qualify</title>
-        <link rel="shortcut icon" href="./img/Logo_OnlyFrenck.jpg">
+        <link rel="shortcut icon" href="../img/Logo_OnlyFrenck.jpg">
         <link rel="stylesheet" href="../../style.css">
         <script src="text/javascript" href="../../script.js"></script>
     </head>
