--- a/NUE-Qualify/login-nuequalify.html
+++ b/NUE-Qualify/login-nuequalify.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Login | NUE-Qualify </title>
-        <link rel="shortcut icon" href="./img/Logo_OnlyFrenck.jpg">
+        <link rel="shortcut icon" href="../img/Logo_OnlyFrenck.jpg">
         <link rel="stylesheet" href="../style.css">
         <script type="text/javascript" src="../script.js"></script>
         <meta charset="UTF-8">
