--- a/Sections/principal.html
+++ b/Sections/principal.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Sistema Principale | NUE 112 - Centralino FVG</title>
-        <link rel="shortcut icon" href="./img/Logo_OnlyFrenck.jpg">
+        <link rel="shortcut icon" href="../img/Logo_OnlyFrenck.jpg">
         <link rel="stylesheet" href="../style.css">
         <script type="text/javascript" src="C../script.js"></script>
         <meta charset="UTF-8">
