--- a/NUE-Qualify/ForgotPassword/module.html
+++ b/NUE-Qualify/ForgotPassword/module.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Reimposta la tua password | NUE-Qualify</title>
-        <link rel="shortcut icon" href="./img/Logo_OnlyFrenck.jpg">
+        <link rel="shortcut icon" href="../img/Logo_OnlyFrenck.jpg">
         <link rel="stylesheet" href="../../style.css">
         <script src="text/javascript" href="../../script.js"></script>
         <meta charset="UTF-8">
