Aggiunti nuovi font e modificati file script e style

--- a/NUE-Qualify/ForgotPassword/module.html
+++ b/NUE-Qualify/ForgotPassword/module.html
@@ -4,6 +4,9 @@
         <title>Reimposta la tua password | NUE-Qualify</title>
         <link rel="shortcut icon" href="../img/Logo_OnlyFrenck.jpg">
         <link rel="stylesheet" href="../../style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
         <script src="text/javascript" href="../../script.js"></script>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +19,7 @@
                 <input type="password" id="new_pass" name="NewPass" required>
                 <label for="confirm">Conferma Nuova Password</label>
                 <input type="password" id="confirm" name="ConfirmNewPass" required>
-                <button id="change" type="submit"<a href="../login-nuequalify.html"></a>
+                <button id="change" type="submit"<a href="../login-nuequalify.html">Conferma</a>></button>
             </form>
         </div>
     </body>
