--- a/NUE-Qualify/login-nuequalify.html
+++ b/NUE-Qualify/login-nuequalify.html
@@ -14,10 +14,10 @@
             <h1>NUE-Qualify Login</h1>
             <form>
                 <label for="email">Email Dipendente</label>
-                <input type="email" id="email" name="email" required>
+                <input type="email" id="email" name="email"/>
                 <label for="password">Password (fornita dal rappresentante di centralino, modificabile una volta effettuato il primo accesso)</label>
-                <input type="password" id="password" name="password" required>
-                <button id="login" type="submit"><a href="../Sections/principal.html">Login</a></button>
+                <input type="password" id="password" name="password"/>
+                <button id="login" type="submit" onclick="check()" title="login"/>
                 <button id="forgot-password" type="forgot-password"><a href="../NUE-Qualify/ForgotPassword/confirm-your-email.html">Password dimenticata</a></button>
             </form>
             </div>
