--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <title>Benvenuto! | NUE 112 - Centralino FVG</title>
         <link rel="stylesheet" href="style.css">
         <link rel="shortcut icon" href="./img/Logo_OnlyFrenck.jpg">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
         <script type="text/javascript" src="script.js"></script>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
