--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html id="page2">
     <head>
         <title>Benvenuto! | NUE 112 - Centralino FVG</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="shortcut icon" href="./img/Logo_OnlyFrenck.jpg">
+        <link rel="shortcut icon" href="./img/nue112.png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
@@ -11,10 +11,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
-    <body>
-        <div>Prima di accedere alle funzioni dell'Operatore NUE112 devi accedere al tuo account NUE-Qualify cliccando <a href="./NUE-Qualify/login-nuequalify.html">qui!</a></div>
-        <div class="topnav">
-            <a class="active" href="index.html"></a>
-        </div>
+    <body background="./img/nue112.png">
+        <h1>Benvenuto al sistema NUE112 del Centralino del Friuli-Venezia Giulia</h1>
+        <h3>Se sei un operatore qualificato clicca <a href="./NUE-Qualify/index.html">qui</a> per accedere al tuo account NUE-Qualify</h3>
+        <h3>Se invece sei un nuovo operatore all'interno del nostro sistema, ti invitiamo a richiedere le tue credenziali mandando una mail a <a href="mailto:info.nue112fvg@gmail.com">info.nue112fvg@gmail.com</a>. Grazie!</h3>
     </body>
 </html>
