--- a/NUE-Qualify/login/ForgotPassword/confirm-your-email.html
+++ b/NUE-Qualify/login/ForgotPassword/confirm-your-email.html
@@ -3,8 +3,8 @@
     <head>
         <title>Conferma la tua e-mail | NUE-Qualify</title>
         <link rel="shortcut icon" href="../img/Logo_OnlyFrenck.jpg">
-        <link rel="stylesheet" href="../../style.css">
-        <script src="text/javascript" href="../../script.js"></script>
+        <link rel="stylesheet" href=../../../style.css">
+        <script src="text/javascript" href="../../../script.js"></script>
     </head>
     <body>
         <div class="container">
