--- a/NUE-Qualify/login/ForgotPassword/module.html
+++ b/NUE-Qualify/login/ForgotPassword/module.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Reimposta la tua password | NUE-Qualify</title>
-        <link rel="shortcut icon" href="../img/Logo_OnlyFrenck.jpg">
-        <link rel="stylesheet" href="../../style.css">
+        <link rel="shortcut icon" href="../../img/Logo_OnlyFrenck.jpg">
+        <link rel="stylesheet" href="../../../style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
